--- a/Test1Pic18.X/nbproject/Makefile-genesis.properties
+++ b/Test1Pic18.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Sun Jul 28 22:43:41 CEST 2019
-default.languagetoolchain.dir=/Applications/microchip/xc8/v2.05/bin
-configurations-xml=625fd6fc9faae7e85216bba9b1afe18e
+#Sat Aug 03 17:20:51 CEST 2019
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v2.05\\bin
+configurations-xml=f7e2ccfeb3902d9435268280fb6dc2a7
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=37eccb08230908d044ad3fe14e24ea9a
 default.languagetoolchain.version=2.05
-host.platform=mac
+host.platform=windows
 conf.ids=default
 default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=5fdf03d5ed941dd849268ab6ecd38ef0
